--- a/css/style.css
+++ b/css/style.css
@@ -227,11 +227,19 @@ div.splash{
 	float: left;
 }
 
+.thumbnail .context{
+	display: none;
+}
+
+.thumbnail .context .h2{
+	color: white;
+}
+
 .right-port .port-details{
 	width:50%;
+	margin: 0 auto;
 	height: 500px;
 	border: 1px solid red;
-	background-color: grey;
 }
 
 .portfolio h2{
@@ -247,15 +255,37 @@ div.splash{
 
 .thumbnail-parent{
 	padding-top: 5%;
-	width: 800px;
+	width: 60%;
 	margin: 0 auto;
+	padding-bottom: 30px;
 }
 
+.thumbnail .rollover{
+	-o-transition-duration: 1s; -moz-transition-duration: 1s; -webkit-transition: -webkit-transform 1s;
+	background-color: black;
+	cursor: pointer;
+	width:350px;
+	height: 200px;
+	position: absolute;
+	z-index: 10;
+	opacity: 0;
+}
+
+.thumbnail .rollover:hover{
+	opacity: 0.4;
+	-o-transition-duration: 1s; -moz-transition-duration: 1s; -webkit-transition: -webkit-transform 1s; -webkit-box-shadow: 0px 0px 4px #000; -moz-box-shadow: 0px 0px 4px #000; box-shadow: 0px 0px 4px #000;
+}
 .thumbnail{
-	width: 33%;
+	width: 350px;
+	height: 200px;
 	display: block;
 	float:left;
 	margin-bottom: 10%;
+}
+
+.thumbnail img{
+	width: 100%;
+	height:100%;
 }
 
 @media (max-width: 845px) {
