--- a/css/style.css
+++ b/css/style.css
@@ -259,22 +259,28 @@ div.splash{
 	padding-bottom: 30px;
 }
 
-.thumbnail .rollover{
-	-o-transition-duration: 1s; -moz-transition-duration: 1s; -webkit-transition: -webkit-transform 1s;
-	background-color: black;
-	cursor: pointer;
-	width:350px;
-	height: 200px;
+.overlay{
 	position: absolute;
-	z-index: 10;
-	opacity: 0;
+	top:0;
+	left:0;
+	background-color: #fff;
+	width:100%;
+	opacity:0;
+	height:100%;
+	transition: all 0.5s ease-in-out;
 }
 
-.thumbnail .rollover:hover{
-	opacity: 0.4;
-	-o-transition-duration: 1s; -moz-transition-duration: 1s; -webkit-transition: -webkit-transform 1s; -webkit-box-shadow: 0px 0px 4px #000; -moz-box-shadow: 0px 0px 4px #000; box-shadow: 0px 0px 4px #000;
+.overlay:hover{
+	opacity:0.8;
 }
+
+.overlay h4{
+	z-index: 99999;
+	font-size: 40px;
+}
+
 .thumbnail{
+	position: relative;
 	width: 350px;
 	height: 200px;
 	display: block;
