--- a/css/style.css
+++ b/css/style.css
@@ -323,6 +323,13 @@ div.splash{
 	.thumbnail-parent{
 		width: 80%;
 	}
+	.thumbnail{
+		width: 100%;
+	}
+
+	header .social-media{
+		width:100%;
+	}
 }
 .back-button{
 	height: 50px;
@@ -434,6 +441,7 @@ div.splash{
 			font-size: 1em;
 
 	}
+
 }
 
 .contact{
@@ -487,4 +495,10 @@ div.splash{
 	height: 50%;
 	top:24%;
 	left:25%;
+}
+
+@media (max-width: 500px){
+	.about .about-content{
+		width:80%;
+	}
 }
